[tool.poetry]
name = "api"
version = "0.0.1"
description = "haapie"
authors = ["Your Name <you@example.com>"]
license = "n"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.3"
fastapi = "^0.110.1"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
pytest = "^8.1.1"
httpx = "^0.27.0"
tox = "^4.14.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
